Chore : ktw.ManagementSystemImpl.java 리팩토링
0. 불필요한 변수 제거 및 return문으로 병합
1. 불필요한 else문을 삭제하여 early return 스타일로 코드 수정
2. 조건문 뒤에 위치하는 소괄호를 한 칸씩 띄워줌
3. 메인 로직과 return문을 한 줄씩 띄워줌
4. 2,3번 작업으로 코드의 가독성 향상 및 코드 작성 관례를 따르도록 수정함
5. printMembers() 메소드의 로직 오류 수정